Fixed margin on Signin button on mobile

--- a/app/assets/stylesheets/common/structure.css.sass
+++ b/app/assets/stylesheets/common/structure.css.sass
@@ -34,7 +34,7 @@ body
 
   nav
     +span-columns(10)
-    margin-top: 0
+    margin-top: 6px
 
   ul
     +clearfix
